# adventofcode2022-hs

./: README.md  adventofcode2022-hs.cabal
lib/AoC/: Lib.hs
src/: Day00.hs  Day1.hs  Day2.hs  Day3.hs
src/Day1/: Day1.hs
src/day1/: Day1.hs
