cabal-version:      2.4
name:               adventofcode2022-hs
version:            0.1.0.0

author:             Bob Klaase
maintainer:         ''


common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.16.4.0,

common solution
  build-depends:      adventofcode2022-hs
  hs-source-dirs:     src

library
  import:             common
  build-depends:      time >= 1.11.1.1
  exposed-modules:    AoC.Lib
  hs-source-dirs:     ./lib

executable day1
  import:             common,solution
  main-is:            Day1.hs

executable day2
  import:             common,solution
  main-is:            Day2.hs